fixed the responsiveness of the last section of the home page on tablet devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -258,7 +258,7 @@ h2 {
 
 .third-home-subheading {
   font-size: 28px;
-  margin-right: 60px;
+  margin-right: 50px;
 }
 
 .to-do-image {
@@ -332,11 +332,11 @@ margin-left: 30px;
   }
 
 
-.weather-app-img {
+.weather-app-img, .apple-desktop {
   padding-top: 100px;
 }
 
-.third-home-subheading {
+.third-home-subheading, .fourth-home-subheading {
   
   font-size: 28px;
 }
@@ -377,8 +377,15 @@ margin-left: 30px;
 
 
 
-  .weather-app-img {
+  .weather-app-img, .apple-desktop {
   padding-top: 50px;
+}
+
+
+
+
+.third-column, .fourth-column {
+  margin-top: -30px;
 }
 
 
